fix: rwth.cool links

--- a/blog/06.mdx
+++ b/blog/06.mdx
@@ -11,8 +11,12 @@ date: 2025-06-21
 
 ## [rwth.cool](https://rwth.cool)
 [rwth.cool](https://rwth.cool) ist jetzt da. Wenn ihr eine Seite der RWTH häufig besucht könnt ihr unter [github.com/htwr-aachen/rwth.cool](https://github.com/htwr-aachen/rwth.cool) dort euch ein kurzen redirekt hinzufügen. Somit könnt ihr zum Beispiel auf:
-- ![Moodle (m.rwth.cool)](https://m.rwth.cool)
-- ![Mensa (hunger.rwth.cool)](https://hunger.rwth.cool)
+- [Moodle (m.rwth.cool)](https://m.rwth.cool)
+- [Online (o.rwth.cool)](https://o.rwth.cool)
+- [Mensa (hunger.rwth.cool)](https://hunger.rwth.cool)
+- [Gebäudesuche (wo.rwth.cool)](https://wo.rwth.cool)
+- [HTWR (htwr.rwth.cool)](https://htwr.rwth.cool)
+- [Quit (quit.rwth.cool)](https://quit.rwth.cool)
 - ...
 
 Später kommt noch ein Tutorial, wie man dies einfach im browser einbaut um noch einfach direkt als Suchmaschine schnell zum Ziel kommt.
