fix: whats next

--- a/blog/06.mdx
+++ b/blog/06.mdx
@@ -23,6 +23,7 @@ Später kommt noch ein Tutorial, wie man dies einfach im browser einbaut um noch
 
 ## Was kommt als nächstes?
 
-1. Panikzettel aktuallisieren. Die sind mir wichtig, da brauche ich auch Hilfe von Leuten aus dem Semester
-2. FAQ/Forum für übliche Fragen
+1. Mailing-Liste & RSS feed
+2. Panikzettel aktuallisieren. Die sind mir wichtig, da brauche ich auch Hilfe von Leuten aus dem Semester
+3. FAQ/Forum für übliche Fragen
 
