fix blogs for rss html

--- a/blog/06.mdx
+++ b/blog/06.mdx
@@ -7,7 +7,7 @@ date: 2025-08-18
 
 ![Bearbeiten & rwth.cool](/other/blog/06/bearbeiten-rwth-cool.png)
 
-  Wie schon in den [docs](/docs) beschrieben werden zusammenfassungen einfach per mdx geschrieben. Damit es aber einfach wird diese zu bearbeiten falls man gerade beim lesen ist, aber einen Fehler gespotted hat gibt es jetzt `bearbeiten` als Knopf. Der bringt einen direkt zu der `page.tsx` oder noch wichtiger zu der summary `.mdx`.
+  Wie schon in den [docs](/docs) beschrieben werden zusammenfassungen einfach per mdx geschrieben. Damit es aber einfach wird diese zu bearbeiten falls man gerade beim lesen ist, aber einen Fehler gespotted hat, gibt es jetzt `bearbeiten` als Knopf. Der bringt einen direkt zu der `page.tsx` oder noch wichtiger, falls vorhanden, zu der `.mdx`.
 
 ## [rwth.cool](https://rwth.cool)
 [rwth.cool](https://rwth.cool) ist jetzt da. Wenn ihr eine Seite der RWTH häufig besucht könnt ihr unter [github.com/htwr-aachen/rwth.cool](https://github.com/htwr-aachen/rwth.cool) dort euch ein kurzen redirekt hinzufügen. Somit könnt ihr zum Beispiel auf:
@@ -23,7 +23,7 @@ Später kommt noch ein Tutorial, wie man dies einfach im browser einbaut um noch
 
 ## Was kommt als nächstes?
 
-1. Mailing-Liste & RSS feed
+1. Mailing-Liste & RSS feed (ist jetzt da)
 2. Panikzettel aktuallisieren. Die sind mir wichtig, da brauche ich auch Hilfe von Leuten aus dem Semester
 3. FAQ/Forum für übliche Fragen
 
