--- a/summaries/syscom/datkom/machester-werwillnachmanchaster.mdx
+++ b/summaries/syscom/datkom/machester-werwillnachmanchaster.mdx
@@ -24,7 +24,7 @@ und es gibt Biphase-Codes, die eine **Selbsttaktung**, wo die Clocks synchronisi
 
 Letztendlich gibt es noch die richtig abgefahrenen Arten wie:
 
-- **4B/5B:** Hier wird differentielle NRZ verwendet aber man bildet je 4Bit Eingabe auf 5Bit Übertragung ab, somit behält man eine gute Effizienz und Selbsttaktung
+- **4B/5B:** Hier wird diff. NRZ verwendet aber man bildet je 4Bit Eingabe auf 5Bit Übertragung ab, somit behält man eine gute Effizienz und Selbsttaktung
 
 - 8B/10B: Ähnlich wie 4B/5B, nur mit 8Bit Eingabe und 10Bit Übertragung, wird für 1 GBit/s Ethernet verwendet.
 
