Fix wording in 4B3T description
Corrected spelling and phrasing in the 4B3T section.

--- a/summaries/syscom/datkom/machester-werwillnachmanchaster.mdx
+++ b/summaries/syscom/datkom/machester-werwillnachmanchaster.mdx
@@ -28,7 +28,7 @@ Letztendlich gibt es noch die richtig abgefahrenen Arten wie:
 
 - 8B/10B: Ähnlich wie 4B/5B, nur mit 8Bit Eingabe und 10Bit Übertragung, wird für 1 GBit/s Ethernet verwendet.
 
-- 4B3T: Weirdes Zeug mit Zuständen, in der in 3 Takte 4 Bit übertragen werden
+- 4B3T: Weirder schieß mit Zuständen, in der in 3 Takte 4 Bit übertragen werden
 
 Es gibt außerdem die Möglichkeit ein digitales Signal in den Variablen einer Welle zu codieren:
 
