--- a/summaries/scil/buk/Wichtige-Probleme.mdx
+++ b/summaries/scil/buk/Wichtige-Probleme.mdx
@@ -38,7 +38,7 @@ PKP: Kein Bock das hier nochmal zu erklären guckt es euch bei Reduktionen an.
 
 ## NP
 
-Am besten kennt ihr die jetzt schon auswendig... Aber ich muss sie ja auch noch lernen. Ich schreib hier nur die Entscheidungsvariante, die anderen sind zwar auch potenziell wichtig aber halt nicht soooo.
+Am besten kennt ihr die jetzt schon auswendig... Aber ich muss sie ja auch noch lernen. Ich schreib hier nur die Entscheidungsvariante, die anderen sind zwar auch potenziell wichtig, aber halt nicht soooo.
 
 ---
 
@@ -52,7 +52,7 @@ CLIQUE
 
 KNAPSACK (KP)
 
-> **Eingabe:** $n$ Gegenstände $(I)$ jedes mit Gewicht $w_i \in \underline{W}$ und Wert $v_i$ $(i \in \underline{n})$ und eine maximales Gewicht $W$
+> **Eingabe:** $n$ Gegenstände $(I)$ jedes mit Gewicht $w_i \in \underline{W}$ und Wert $v_i$ $(i \in \underline{n})$ und ein maximales Gewicht $W$
 >
 > **Frage:** gegeben $V \in \mathbb{N}$, gibt es eine Teilmenge $I' \subseteq I$ mit $\sum_{i \in I'} w_i \leq W$ und $\sum_{i \in I'} v_i \geq V$?
 
@@ -76,7 +76,7 @@ TSP
 
 SAT
 
-> **Eingabe:** Formel $\phi$ in KNF (Konjuktiver Normalform, also $(x_1 \land x_2) \lor (x_3 \land x_4)$)
+> **Eingabe:** Formel $\phi$ in KNF (Konjunktiver Normalform, also $(x_1 \lor x_2) \land (x_3 \lor x_4)$)
 >
 > **Frage:** gibt es eine erfüllende Belegung für $\phi$?
 
@@ -84,7 +84,7 @@ SAT
 
 3-SAT
 
-> **Eingabe:** Formel $\phi$ in KNF, aber mit nur drei Variablen pro und verknüpfun (Konjuktiver Normalform, also $(x_1 \land x_2 \land \overline{x_3}) \lor (x_1 \land x_2 \land x_3)$)
+> **Eingabe:** Formel $\phi$ in KNF, aber mit nur drei Variablen pro und verknüpfun (Konjunktiver Normalform, also $(x_1 \lor x_2 \lor \overline{x_3}) \land (x_1 \lor x_2 \lor x_3)$)
 >
 > **Frage:** gibt es eine erfüllende Belegung für $\phi$?
 
@@ -114,7 +114,7 @@ HAMILTONKREIS (HC)
 
 DHC ist genau das gleiche nur mit einem gerichteten Graphen.
 
-?> Das auswählen passender Probleme ist eure Sache...
+?> Das Auswählen passender Probleme ist eure Sache...
 
 Viel Glück.
 
