--- a/summaries/scil/buk/Das-mir-zu-komplex.mdx
+++ b/summaries/scil/buk/Das-mir-zu-komplex.mdx
@@ -56,7 +56,7 @@ Der Name ist Programm... Aber nehmen wir mal wieder VERTEX_COVER:
 
 Wir brauchen irgendein NP-schweres Problem, welches von welchem wir dann polynomiell reduzieren (Wir reduzieren immer bei NP-schwer)
 
-Hier nehmen wir einfach mal das CLIQUE Problem, also ob ein vollständiger Teilgraph bestimmter Größe existiert. Wir versuchen also CLIQUE $\le_p$ VERTEX_COVER zu zeigen.
+Hier nehmen wir einfach mal das CLIQUE Problem, also ob ein vollständig verbundener Teilgraph bestimmter Größe existiert. Wir versuchen also CLIQUE $\le_p$ VERTEX_COVER zu zeigen.
 
 <Spoiler>
 
