fix latex in buk

--- a/summaries/scil/buk/Turing-die-Maschine.mdx
+++ b/summaries/scil/buk/Turing-die-Maschine.mdx
@@ -118,7 +118,7 @@ Nun anstatt deinen C-Code als Eingabe zu geben, gibst du eine Turingmaschine $M$
 
 !> Aber mein PSP Code ist doch in Text geschrieben und nicht in 7-Tupeln.
 
-Völlig richtig deswegen hat sich Turing oder Gödel oder wer auch immer, sich was ausgedacht **Gödelnummern**, um eine TM $M$ in ein $\{0,1\} Alphabet zu kodieren.
+Völlig richtig deswegen hat sich Turing oder Gödel oder wer auch immer, sich was ausgedacht **Gödelnummern**, um eine TM $M$ in ein $\{0,1\}$ Alphabet zu kodieren.
 
 Um eine korrekte Gödelnummer zu erhalten muss sie Präfixfrei sein, damit wir erkennen wann eine Gödelnummer aufhört und und sie eindeutig ist.
 
@@ -140,6 +140,6 @@ Falls ihr **informell** beschreiben sollt, was eine Turingamschine macht, ist da
 
 Falls ihr aber nur beschreiben oder **formel** beschreiben sollt, was eine Turingmaschine macht, dann ist das meist das Angeben einer Funktion wie
 
-$f(x) := \begin{cases} 1 & \text{wenn $x$ in mit 1 anfängt} \\ 0 & \text{sonst} \end{cases}$
+$f(x) := \begin{cases} 1 & \text{wenn x in mit 1 anfängt} \\ 0 & \text{sonst} \end{cases}$
 
 Dazu könnt ihr noch entwas erklären, aber meist ist auch tatsächlich die Funktion gefragt.
